# nocturne-inspector

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.nocturne/: memory.md  project.json  rules.md
docs/: architecture.md  inspection-report.schema.json  integration.md  philosophy.md  report-schema.md  roadmap.md  ui.md  vision.md
src/nocturne_inspector/: __init__.py  cli.py  models.py  pipeline.py  report.py  scanner.py
src/nocturne_inspector/inspectors/: __init__.py  base.py  documentation.py  registry.py
tests/: test_cli.py  test_documentation_inspector.py  test_inspector_base.py  test_inspector_registry.py  test_models.py  test_pipeline.py  test_report.py  test_report_schema.py  test_scanner.py
