[project]
name = "nocturne-inspector"
version = "0.1.0"
description = "Engineering Intelligence Engine for software projects."
readme = "README.md"
license = "MIT"
authors = [{ name = "Nocturne Inspector" }]
requires-python = ">=3.13"

[project.scripts]
nocturne-inspector = "nocturne_inspector.cli:main"

[project.optional-dependencies]
dev = [
    "jsonschema[format]==4.26.0",
    "mypy==2.3.0",
    "ruff==0.15.22",
    "types-jsonschema==4.26.0.20260518",
]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]
